tests/chapter_16/valid/chars/add_char.c
int main(void) {
    // a simple test of arithmetic with character types
    char c = 'c';
    char a = 'a';
    return c - a;
}