tests/chapter_16/invalid_types/char_ptr_compound_init.c
int main(void)
{
    // can't initialize a char * with a compound initializer
    char *ptr = {'a', 'b', 'c'};
    return 0;
}